result/HTML/entities.html.err
./test/HTML/entities.html:1: error: htmlParseEntityRef: expecting ';'
<p tst="a&amp;b" tst2="a&b" tst3="a & b">
                         ^
./test/HTML/entities.html:1: error: htmlParseEntityRef: no name
<p tst="a&amp;b" tst2="a&b" tst3="a & b">
                                    ^
./test/HTML/entities.html:3: error: htmlParseEntityRef: expecting ';'
a&b
  ^
./test/HTML/entities.html:4: error: htmlParseEntityRef: no name
a & b
   ^
